--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <header>
+        <header class="container-fluid">
         
         <div class="row">
             <a href="index.html">
